@@ -6,6 +6,7 @@ Distributed under the GPL v3 or later
 
 - Support for a new stream type
 - Series page downloading was partly broken after changes in Areena
+- Some Elävä arkisto/Arkivet pages were broken
 
 Version 20240130
 
